Fix issue on overlapping wishlist elements and added pagination and social on product category page

--- a/themes/profumo-labo/_dev/css/theme/components/home/_blockfeaturedproduct.scss
+++ b/themes/profumo-labo/_dev/css/theme/components/home/_blockfeaturedproduct.scss
@@ -102,7 +102,7 @@
                 margin: 0 0 10px;
                 font-size: $font-size-product-lg;
                 position: relative;
-                padding: 0 30px 0 0;
+                padding: 0 40px 0 0;
 
                 .wishlist-button-add.wishlist-button-product{
                     opacity: 0.5;
@@ -496,7 +496,7 @@
                 left: 0;
                 margin: auto;
                 box-shadow: none;
-                width: auto;
+                width: 40px;
                 height: auto;
             }
         }
