--- a/themes/profumo-labo/_dev/css/theme/components/product/_product-single.scss
+++ b/themes/profumo-labo/_dev/css/theme/components/product/_product-single.scss
@@ -347,7 +347,7 @@
                 margin: 0 0 10px;
                 font-size: $font-size-product-lg;
                 position: relative;
-                padding: 0 30px 0 0;
+                padding: 0 40px 0 0;
                 color: $black;
 
                 .wishlist-button-add.wishlist-button-product{
